Styled login page

--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,13 @@
-body{
-    margin: 0%;
+* {
+    margin: 0;
+    padding: 0;
     font-family: 'Open sans';
+    box-sizing: border-box;
+}
+
+html{
+    width: 1200px;
+    margin: 0 auto;
 }
 
 
@@ -81,36 +88,43 @@ width: 200px;
 
 
 /* Welcome note */
-.welcome img{
-    float: right;
-    height: 200px;
-    width: 200px;
+.welcome section img {
+    max-width: 100px;
+    height: auto;
 }
 .welcome{
-    overflow: auto;
-    margin-right: 500px;
-    margin-left: 175px;
-   
+    padding: 50px 0 60px 0;
 }
 .welcome h4{
     font-size: 24px;
     font-weight: lighter;
-    margin-bottom: 0%;
     color: #000637;
+    padding-left:60px;
 }
-.welcome p{
+.sect-left {
+    width: 820px;
+    float: left;
+    padding-top: 15px;
+    padding-left: 50px;
+    padding-right: 20px; 
+    margin-left: 10px;
+}
+ .sect-left  p {
+    letter-spacing: 1px;
     font-size: 14px;
     font-weight: 50;
-   
+ }
+ .sect-right {
+    width: 300px;
+    float: right;
 }
-
 
 /* News */
-.news_section{
+.news_section {
     background-color: #EAFFE0;
     padding-top: 50px;
-
 }
+
 .news_section h3{
     font-weight: 100;
     font-size: 24px;
